--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body{
-  background-color: rgb(243, 243, 243);
+  background-color: #f3f3f3;
 }
 
 /* Loader */
@@ -47,11 +47,22 @@ body{
 /* Nav */
 
 nav{
-  background-color: rgb(18, 35, 68);
-  height: 8vh;
+  background-color: transparent;
+  height: 10vh;
   display: flex;
   position: fixed;
   width: 100%;
+  transition: linear 0.15s;
+}
+
+.nav-scroll{
+  background-color: black;
+  transition: linear 0.15s;
+}
+
+.nav-scroll .nav__icon p,
+.nav-scroll .nav__options ul li{
+  color: white;
 }
 
 .nav__container{
@@ -59,13 +70,13 @@ nav{
   justify-content: space-between;
   width: 1200px;
   margin: 0 auto;
+  padding: 0 0.5rem;
 }
 
 .nav__icon{
   display: flex;
   gap: 0.5rem;
   align-items: center;
-  padding: 1rem;
 }
 
 .nav__icon:hover{
@@ -76,9 +87,8 @@ nav{
   font-weight: bold;
 }
 
-.nav__icon p,
-.nav__icon i{
-  color: white;
+.nav__icon p{
+  color: black;
 }
 
 .nav__icon img{
@@ -88,23 +98,21 @@ nav{
 .nav__options{
   display: flex;
   align-items: center;
-  padding: 0.5rem;
 }
 
 .nav__options ul{
   display: flex;
   gap: 0.5rem;
   justify-content: end;
-  padding: 0.5rem;
   height: 100%;
 }
 
 .nav__options ul li{
-  color: white;
+  color: black;
   list-style: none;
   display: flex;
   align-items: center;
-  padding: 0 0.5rem;
+  padding: 0 0.2rem;
 }
 
 .nav__options ul li:hover{
@@ -114,41 +122,42 @@ nav{
 /* Home */
 
 .home__container{
-  padding: calc(8vh + 1rem) 0 1rem 0;
+  padding: calc(10vh + 1rem) 0 2rem 0;
   max-width: 1200px;
   margin: 0 auto;
 }
 
 .home__menu{
-  padding: 1rem 0.5rem 1rem 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.25rem;
 }
 
 .input-container{
-  margin-bottom: 0.5rem;
-  padding: 0 1.5rem;
+  margin-bottom: 0.25rem;
+  padding: 0 0.20rem;
 }
 
 .input-container form{
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
 .input-container form input{
   border: none;
-  background-color: rgb(218, 218, 218);
+  background-color: white;
   padding: 0.5rem;
-  width: calc(100% - 71.25px);
-  border-radius: 0.5rem;
-  font-size: 1rem;
+  width: 100%;
+  font-size: 1em;
+}
+
+.input-container form input:focus{
+  outline: none;
 }
 
 .input-container form button{
-  background-color: rgb(18, 35, 68);
-  color: white;
+  color: black;
   border: none;
-  padding: 7px 12px;
-  border-radius: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  background-color: transparent;
 }
 
 .input-container form button:hover{
@@ -158,22 +167,19 @@ nav{
 .filter-container{
   display: flex;
   justify-content: flex-end;
-  padding: 0 1.5rem;
+  padding: 0 0.20rem;
 }
 
 .btn-for-filter{
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
   border: none;
   height: 34px;
-  padding: 0 9px;
+  padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
   background-color: transparent;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
-  background-color: rgb(18, 35, 68);
-  color: white;
+  color: black;
 }
 
 .btn-for-filter:hover{
@@ -441,17 +447,17 @@ nav{
   color: rgb(18, 35, 68);
 }
 
-
+/* Products */
 
 .products-ul-container{
-  padding: 0 1rem 1rem 1rem;
   min-height: 60vh;
+  padding: 0 0.2rem;
 }
 
 .products-ul-container ul{
   display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.2rem;
 }
 
 .products-ul-container ul li{
@@ -459,19 +465,18 @@ nav{
 }
 
 .product-card{
-  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.10);
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   transition: 0.3s;
 }
 
 .product-card:hover{
   cursor: pointer;
-  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.10);
   transition: 0.3s;
 }
 
@@ -482,7 +487,7 @@ nav{
 }
 
 .product-image img{
-  height: 130px;
+  height: 70px;
 }
 
 .product-line{
@@ -508,7 +513,6 @@ nav{
   display: flex;
   justify-content: space-between;
 }
-
 
 .product-price p{
   font-size: 14px;
@@ -536,7 +540,7 @@ nav{
 /* Product Detailed */
 
 .product-detailed-container{
-  padding: 1rem;
+  padding: 0.2rem;
   padding-top: calc(8vh + 1rem);
 }
 
@@ -545,7 +549,7 @@ nav{
 }
 
 .pd-btn-container button{
-  color: rgb(18, 35, 68);
+  color: black;
   padding: 5px 8px 5px 0;
   border: none;
   background-color: transparent;
@@ -553,7 +557,6 @@ nav{
   gap: 2px;
   align-items: center;
   justify-content: center;
-  border-radius: 5px;
 }
 
 .pd-btn-container button:hover{
@@ -569,14 +572,14 @@ nav{
 }
 
 .pd-category-container p{
-  color: rgb(102, 102, 102);
+  color: rgb(150, 150, 150);
+  font-size: 0.9em;
 }
 
 .product-container{
   margin: 0 0 1rem 0;
   padding: 1rem;
   background-color: white;
-  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.10);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -617,8 +620,6 @@ nav{
 .pd-description-container{
   padding: 1rem;
   background-color: white;
-  border-radius: 0.5rem;
-  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.10);
   margin-bottom: 1rem;
 }
 
@@ -630,7 +631,7 @@ nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 5px;
+  gap: 0.2rem;
 }
 
 .pd-product-quantity{
@@ -642,7 +643,6 @@ nav{
 .pd-product-quantity span{
   width: 40px;
   background-color: rgb(218, 218, 218);
-  border-radius: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -652,9 +652,8 @@ nav{
 .pd-product-quantity button{
   width: 40px;
   border: none;
-  background-color: rgb(18, 35, 68);
+  background-color: black;
   color: white;
-  border-radius: 0.5rem;
 }
 
 .pd-product-quantity button:hover{
@@ -666,8 +665,7 @@ nav{
   padding: 0.5rem;
   height: 40px;
   border: none;
-  border-radius: 0.5rem;
-  background-color: rgb(18, 35, 68);
+  background-color: black;
   color: white;
 }
 
@@ -678,12 +676,11 @@ nav{
 .pd-sugested-products-container{
   background-color: white;
   padding: 1rem;
-  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.10);
 }
 
 .pd-sugested-products-ul ul{
   display: grid;
-  gap: 1rem;
+  gap: 0.2rem;
   grid-auto-flow: column;
   overflow-x: auto;
   padding: 1rem 1rem;
@@ -691,8 +688,8 @@ nav{
 }
 
 .pd-sugested-products-ul ul li{
+  outline: 1px solid whitesmoke;
   list-style: none;
-  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.10);
   padding: 1rem;
   width: 190px;
   display: flex;
@@ -736,28 +733,25 @@ nav{
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  padding: 2rem;
+  padding: 0.2rem;
   padding-top: calc(8vh + 2rem);
 }
 
 .login-test-container{
-  border-radius: 0.5rem;
   background-color: white;
   padding: 1rem;
   text-align: center;
-  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.10);
 }
 
 .login-test-credentials-container{
-  border-radius: 0.5rem;
-  background-color: rgb(218, 218, 218);
+  background-color: #f3f3f3;
   padding: 0.5rem;
   margin-top: 0.5rem;
 }
 
 .login-test-credentials-container button{
   border: none;
-  background-color: rgb(18, 35, 68);
+  background-color: black;
   padding: 0.5rem;
   border-radius: 0.5rem;
   margin-top: 0.5rem;
@@ -767,26 +761,28 @@ nav{
 .login-form-container{
   background-color: white;
   padding: 1rem;
-  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.10);
 }
 
 .login-form-container h2{
   margin-bottom: 1rem;
-  color: rgb(18, 35, 68);
+  color: black;
 }
 
 .login-form-container button{
   width: 100%;
   height: 40px;
   border: none;
-  border-radius: 0.5rem;
-  background-color: rgb(18, 35, 68);
+  background-color: black;
   color: white;
   margin-top: 0.2rem;
 }
 
 .login-form-container button:hover{
   cursor: pointer;
+}
+
+.login-form-container button:focus{
+  outline: none;
 }
 
 .login-input-container{
@@ -810,10 +806,13 @@ nav{
 .login-input-container input{
   width: 100%;
   border: none;
-  background-color: rgb(218, 218, 218);
+  background-color: #f3f3f3;
   padding: 0.5rem;
-  border-radius: 0.5rem;
   font-size: 1rem;
+}
+
+.login-input-container input:focus{
+  outline: none;
 }
 
 .lg-input-container{
@@ -823,7 +822,7 @@ nav{
 }
 
 .lg-input-container i{
-  color: rgb(18, 35, 68);
+  color: black;
 }
 
 .lg-input-container i:hover{
@@ -996,37 +995,47 @@ nav{
 /* Footer */
 
 .footer-container{
-  background-color: rgb(204, 204, 204);
+  background-color: black;
   padding: 2rem 1rem 1rem 1rem;
   text-align: center;
   
 }
 
+.footer-container p{
+  color: white;
+  font-weight: 500;
+}
+
 .footer-container ul li{
-  list-style: none;;
+  list-style: none;
 }
 
 .footer-container ul li a{
   text-decoration: none;
-  color: rgb(70, 70, 70);
+  color: rgb(150, 150, 150);
   transition: 0.2s;
 }
 
 .footer-container ul li a:hover{
-  color: black;
+  color: white;
   transition: 0.2s;
 }
 
 .footer-container ul li{
-  color: rgb(70, 70, 70);
+  color: rgb(150, 150, 150);
+  font-weight: 500;
   width: fit-content;
   transition: 0.2s;
 }
 
 .footer-container ul li:hover{
   cursor: pointer;
-  color: black;
+  color: white;
   transition: 0.2s;
+}
+
+.footer-container h3{
+  color: white;
 }
 
 .ft-about-container li:hover,
@@ -1083,12 +1092,12 @@ nav{
 }
 
 .ft-social-media-container a i{
-  color: rgb(70, 70, 70);
+  color: rgb(150, 150, 150);
   transition: 0.2s;
 }
 
 .ft-social-media-container a i:hover{
-  color: black;
+  color: white;
   transition: 0.2s;
 }
 
