--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@ nav{
 .input-container form input{
   border: none;
   background-color: white;
-  padding: 0.5rem;
+  padding: 0.75rem;
   width: 100%;
   font-size: 1em;
   border-radius: 0;
@@ -181,7 +181,6 @@ nav{
   border: none;
   height: 34px;
   padding: 0.5rem 0.75rem;
-  border-radius: 0.5rem;
   background-color: transparent;
   color: black;
 }
@@ -567,11 +566,14 @@ nav{
 }
 
 .pd-category-container{
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0 0.2rem 0;
+  background-color: black;
+  width: fit-content;
+  padding: 0.2em 0.4rem;
 }
 
 .pd-category-container p{
-  color: rgb(150, 150, 150);
+  color: white;
   font-size: 0.9em;
 }
 
@@ -601,7 +603,7 @@ nav{
 .pd-img-container{
   display: flex;
   justify-content: center;
-  padding: 1rem;
+  padding: 5rem 0;
 }
 
 .pd-img-container img{
@@ -835,7 +837,7 @@ nav{
 /* User */
 
 .user-view-container{
-  padding: 2rem;
+  padding: 1rem;
   padding-top: calc(10vh + 2rem);
 }
 
