--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,16 @@ body{
   background-color: #f3f3f3;
 }
 
+.line-bar{
+  height: 1px;
+  background-color: white;
+  width: 100%;
+  background-image: linear-gradient(to left, transparent, transparent 50%, black 50%, black);
+  background-position: 100% 0;
+  background-size: 200% 100%;
+  transition: all 0.25s ease-in;
+}
+
 /* Loader */
 
 .loader-overlay{
@@ -153,6 +163,10 @@ nav{
   outline: none;
 }
 
+.fill{
+  background-position: 0 0;
+}
+
 .input-container form button{
   color: black;
   background-color: white;
@@ -170,8 +184,18 @@ nav{
 
 .filter-container{
   display: flex;
-  justify-content: flex-end;
+  justify-content: end;
   padding: 0 1rem;
+}
+
+.filter-container__show-all{
+  border: none;
+  margin: 0 auto 0 0;
+}
+
+.filter-container__show-all:hover{
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .btn-for-filter{
@@ -496,6 +520,7 @@ nav{
 
 .product-title{
   margin-bottom: 1rem;
+  font-size: 0.9em;
 }
 
 .product-description{
@@ -513,7 +538,7 @@ nav{
 }
 
 .product-price p{
-  font-size: 14px;
+  font-size: 0.8em;
 }
 
 .product-button{
@@ -789,7 +814,6 @@ nav{
 .login-input-container{
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
   margin-bottom: 0.7rem;
 }
 
@@ -810,6 +834,7 @@ nav{
   background-color: #f3f3f3;
   padding: 0.5rem;
   font-size: 1rem;
+  border-radius: 0;
 }
 
 .login-input-container input:focus{
@@ -818,12 +843,14 @@ nav{
 
 .lg-input-container{
   display: flex;
-  gap: 0.3rem;
   align-items: center;
+  background-color: #f3f3f3;
 }
 
 .lg-input-container i{
   color: black;
+  background-color: #f3f3f3;
+  padding: 0 0.5rem;
 }
 
 .lg-input-container i:hover{
