--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body{
 
 .line-bar{
   height: 1px;
-  background-color: white;
+  background-color: rgb(194, 194, 194);
   width: 100%;
   background-image: linear-gradient(to left, transparent, transparent 50%, black 50%, black);
   background-position: 100% 0;
@@ -152,8 +152,7 @@ nav{
 
 .input-container form input{
   border: none;
-  background-color: white;
-  padding: 0.75rem;
+  background-color: transparent;
   width: 100%;
   font-size: 1em;
   border-radius: 0;
@@ -169,9 +168,9 @@ nav{
 
 .input-container form button{
   color: black;
-  background-color: white;
+  background-color: transparent;
   border: none;
-  padding: 0.5rem 0.75rem;
+  padding: 0.2rem 0.75rem;
 }
 
 .input-container form button:focus{
@@ -193,7 +192,6 @@ nav{
   margin: 0 auto 0 0;
   background-color: transparent;
   color: black;
-  padding: 0 0.75rem;
 }
 
 .filter-container__show-all:hover{
