--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: 'Urbanist', sans-serif;
 }
 
 body{
@@ -257,28 +260,34 @@ nav{
 }
 
 .fbc-options-container{
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 .fbc-category-container{
-  padding: 0 0.5rem;
+  padding: 0 1rem;
 }
 
 .fbc-category-container p{
-  font-size: 1.2rem;
-  margin-bottom: 5px;
+  color: white;
+  margin: 1rem 0 0 0;
+  background-color: black;
+  width: fit-content;
+  padding: 0.2em 0.4rem;
+  font-size: 0.9em;
 }
 
 .fbc-category-container ul{
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  margin: 0.5rem 0 0 0;
+  gap: 0.5rem;
 }
 
 .fbc-category-container ul li{
   list-style: none;
   margin-left: 0.5rem;
   width: fit-content;
+  font-size: 0.9em;
 }
 
 .fbc-category-container ul li:hover{
@@ -796,6 +805,7 @@ nav{
 
 .login-form-container{
   padding: 1rem;
+  text-align: center;
 }
 
 .login-form-container form{
@@ -846,7 +856,7 @@ nav{
 .login-input-container label{
   font-size: 0.75em;
   margin: 0 0 0.5rem 0;
-  font-weight: 600;
+  font-weight: bold;
   color: rgb(100, 100, 100);
 }
 
@@ -1038,7 +1048,7 @@ nav{
 
 .footer-container p{
   color: white;
-  font-weight: 600;
+  font-weight: bold;
 }
 
 .footer-container ul li{
@@ -1058,7 +1068,7 @@ nav{
 
 .footer-container ul li{
   color: rgb(150, 150, 150);
-  font-weight: 600;
+  font-weight: bold;
   width: fit-content;
   transition: 0.2s;
 }
