--- a/src/App.css
+++ b/src/App.css
@@ -955,6 +955,9 @@ nav{
 .pch-ul-container{
   max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .pch-ul{
@@ -1000,7 +1003,6 @@ nav{
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  padding: 0 0.5rem;
 }
 
 .pch-pd-img-title-price{
@@ -1049,6 +1051,7 @@ nav{
 .footer-container p{
   color: white;
   font-weight: bold;
+  font-size: 0.8em;
 }
 
 .footer-container ul li{
@@ -1158,11 +1161,6 @@ nav{
   .products-ul-container ul li{
     width: 100%;
   }
-  
-  .pch-ul{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
 
   /* Product Detailed */
 
@@ -1250,14 +1248,14 @@ nav{
   }
 
   /* Purchases */
-
+  
   .purchases-view-container{
     padding: 1rem 2rem;
     padding-top: calc(10vh + 1rem);
   }
 
-  .pch-ul{
-    grid-template-columns: 1fr 1fr 1fr;
+  .pch-ul-container{
+    flex-direction: row;
   }
 
   /* Login */
@@ -1273,12 +1271,6 @@ nav{
   /* Products */
 
   .products-ul-container ul{
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-
-  /* Purchases */
-
-  .pch-ul{
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
