--- a/src/App.css
+++ b/src/App.css
@@ -226,11 +226,13 @@ nav{
   bottom: 0;
   display: flex;
   justify-content: space-between;
+  opacity: 0;
+  transition: 0.5s;
 }
 
-.filter-by-category-space{
-  width: 20%;
-  height: 100%;
+.filter-by-category-overlay__appear{
+  opacity: 1;
+  transition: 0.5;
 }
 
 .filter-by-category-container{
@@ -238,6 +240,14 @@ nav{
   width: 80%;
   height: 100%;
   max-width: 350px;
+  position: fixed;
+  right: -80%;
+  transition: 0.5s;
+}
+
+.filter-by-category-container__appear{
+  transform: translate(-100%, 0);
+  transition: 0.5s;
 }
 
 .fbc-btn-container{
