--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ nav{
   position: fixed;
   width: 100%;
   transition: linear 0.15s;
+  z-index: 1;
 }
 
 .nav-scroll{
@@ -240,6 +241,7 @@ nav{
   justify-content: space-between;
   opacity: 0;
   transition: 0.5s;
+  z-index: 2;
 }
 
 .filter-by-category-overlay__appear{
@@ -330,6 +332,7 @@ nav{
   justify-content: space-between;
   opacity: 0;
   transition: 0.5s;
+  z-index: 2;
 }
 
 .cart-overlay__appear{
@@ -1062,7 +1065,7 @@ nav{
   text-align: center;
   display: flex;
   flex-direction: column;
-  margin: 3rem auto 0 auto;
+  margin: 5rem auto 0 auto;
   max-width: 400px;
   gap: 0.5rem;
 }
@@ -1571,6 +1574,10 @@ nav{
   .pd-img-container{
     width: 750px;
     align-items: center;
+  }
+
+  .pd-sugested-products-container{
+    padding: 2rem 0;
   }
 
   /* Purchases */
