--- a/src/App.css
+++ b/src/App.css
@@ -684,13 +684,27 @@ nav{
   color: white;
 }
 
-.product-container{
+.product-container__container{
+  background-color: white;
   margin: 0 0 1rem 0;
+}
+
+.product-container__container .pd-line{
+  width: 100%;
+  background-color: black;
+}
+
+.product-container{
   padding: 1rem;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.product-container .pd-line{
+  width: 90%;
+  background-color: rgb(194, 194, 194);
 }
 
 .product-container p{
