--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ nav{
   list-style: none;
   display: flex;
   align-items: center;
-  padding: 0 0.75rem;
+  padding: 0 0.5rem;
 }
 
 .nav__options ul li:hover{
@@ -1326,18 +1326,25 @@ nav{
 }
 
 .pch-ul{
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
   margin-top: 0.5rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .pch-container{
+  width: 100%;
   list-style: none;
   padding: 0.75rem;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 700px;
+
 }
 
 .purchases-view-container .pd-line{
@@ -1545,6 +1552,12 @@ nav{
 
 @media screen and ( min-width: 600px ) {
 
+  /* Nav */
+
+  .nav__options ul li{
+    padding: 0 0.75rem;
+  }
+
   /* Home */
 
   .products-ul-container ul{
@@ -1575,10 +1588,6 @@ nav{
   }
 
   /* Purchases */
-
-  .pch-ul-container{
-    display: flex;
-  }
 
   .pch-total-container{
     height: 100%;
