--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,28 @@ nav{
   transform: translate(0, 60px);
 }
 
+.pop-up__logged-out{
+  position: fixed;
+  z-index: 2;
+  top: -50px;
+  left: calc(50% - 125px);
+  padding: 0.5rem;
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  background-color: green;
+  text-align: center;
+  transition: 0.5s;
+}
+
+.pop-up__logged-out p{
+  color: white;
+}
+
+.active__logged-out{
+  transform: translate(0, 60px);
+}
+
 .home__menu{
   margin-bottom: 0.25rem;
 }
