--- a/src/App.css
+++ b/src/App.css
@@ -1581,6 +1581,55 @@ nav{
   transition: 0.2s;
 }
 
+/* Not Found */
+
+.not-found-container{
+  padding-top: calc(10vh + 2rem);
+  min-height: calc(90vh);
+}
+
+.not-found-container__description{
+  padding: 1rem;
+  max-width: 400px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.not-found-container__description h2,
+.not-found-container__description p,
+.not-found-container__description i{
+  margin-bottom: 1rem;
+}
+
+.not-found-container__description span{
+  font-weight: bold;
+  font-size: 5em;
+}
+
+.not-found-container__description button{
+  background-color: transparent;
+  border: none;
+  font-weight: bold;
+  padding: 0.5rem;
+  color: black;
+  cursor: pointer;
+  width: fit-content;
+}
+
+.not-found-container__description button:hover .line-bar{
+  background-position: 0 0;
+}
+
+.not-found-container__description .line-bar{
+  background-color: transparent;
+  height: 2px;
+}
+
 /* <!-- --> */
 
 /*          Desktop          */
