--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body{
   background-color: #f3f3f3;
 }
 
+i{
+  font-size: 1.25rem;
+}
+
 .line-bar{
   height: 1px;
   background-color: rgb(194, 194, 194);
@@ -100,8 +104,11 @@ nav{
 }
 
 .nav__icon{
+  height: fit-content;
+  margin: auto 0;
   display: flex;
   gap: 0.35rem;
+  padding: 0.75rem;
   align-items: center;
 }
 
@@ -129,7 +136,6 @@ nav{
 .nav__options ul{
   display: flex;
   justify-content: end;
-  height: 100%;
 }
 
 .nav__options ul li{
@@ -137,7 +143,11 @@ nav{
   list-style: none;
   display: flex;
   align-items: center;
-  padding: 0 0.5rem;
+  padding: 0.5rem 0.75rem;
+}
+
+.bi-person-fill{
+  font-size: 1.5rem;
 }
 
 .nav__options ul li:hover{
@@ -293,6 +303,10 @@ nav{
   transition: 0.5;
 }
 
+.fbc_empty{
+  width: 100%;
+}
+
 .filter-by-category-container{
   background-color: rgb(243, 243, 243);
   width: 80%;
@@ -312,6 +326,7 @@ nav{
   padding: 5px;
   display: flex;
   justify-content: flex-end;
+  padding: 0.75rem;
 }
 
 .fbc-btn-container button{
@@ -321,6 +336,7 @@ nav{
   justify-content: center;
   background-color: transparent;
   color: rgb(18, 35, 68);
+  padding: 0.25rem;
 }
 
 .fbc-btn-container button:hover{
@@ -384,6 +400,10 @@ nav{
   transition: 0.5s;
 }
 
+.cart_empty{
+  width: 100%;
+}
+
 .cart-container{
   background-color: rgb(243, 243, 243);
   width: 80%;
@@ -400,12 +420,13 @@ nav{
 }
 
 .cart-close-btn{
-  padding: 5px;
+  padding: 0.75rem;
   display: flex;
   justify-content: flex-end;
 }
 
 .cart-close-btn button{
+  padding: 0.25rem;
   border: none;
   display: flex;
   align-items: center;
@@ -564,6 +585,10 @@ nav{
   color: black;
 }
 
+.cart-empty i{
+  font-size: 3rem;
+}
+
 /* Products */
 
 .products-ul-container{
@@ -680,12 +705,13 @@ nav{
 
 .pd-btn-container button{
   color: black;
-  padding: 0 0.25rem;
+  padding: 0 0.75rem;
   border: none;
   background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 0.5rem;
 }
 
 .pd-btn-container button i{
@@ -855,7 +881,10 @@ nav{
   padding: 1rem;
   display: flex;
   align-items: center;
-  gap: 1rem;
+}
+
+.additional-container i{
+  padding: 0 1.5rem 0 0.5rem;
 }
 
 .pd-product-button{
@@ -1557,7 +1586,7 @@ nav{
   display: flex;
   margin-top: 1rem;
   margin-bottom: 3rem;
-  gap: 0.2rem;
+  gap: 0.5rem;
 }
 
 .ft-social-media-container{
@@ -1568,7 +1597,7 @@ nav{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0.5rem;
 }
 
 .ft-social-media-container a i{
@@ -1586,6 +1615,10 @@ nav{
 .not-found-container{
   padding-top: calc(10vh + 2rem);
   min-height: calc(90vh);
+}
+
+.not-found-container i{
+  font-size: 3rem;
 }
 
 .not-found-container__description{
@@ -1641,7 +1674,7 @@ nav{
   /* Nav */
 
   .nav__options ul li{
-    padding: 0 0.75rem;
+    padding: 0.5rem 0.75rem;
   }
 
   /* Home */
