--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@ i{
   transition: all 0.25s ease-in;
 }
 
+.show-desktop{
+  display: none;
+}
+
 /* Loader */
 
 .loader-overlay{
@@ -136,6 +140,7 @@ nav{
 .nav__options ul{
   display: flex;
   justify-content: end;
+  gap: 0.5rem;
 }
 
 .nav__options ul li{
@@ -143,7 +148,8 @@ nav{
   list-style: none;
   display: flex;
   align-items: center;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem;
+  gap: 0.25rem;
 }
 
 .bi-person-fill{
@@ -160,6 +166,7 @@ nav{
   padding: calc(10vh + 1rem) 0 2rem 0;
   max-width: 1200px;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 .pop-up__logged-in{
@@ -278,10 +285,15 @@ nav{
   padding: 0.5rem 0.75rem;
   background-color: transparent;
   color: black;
+  gap: 0.5rem;
 }
 
 .btn-for-filter:hover{
   cursor: pointer;
+}
+
+.btn-for-filter:hover p{
+  text-decoration: underline;
 }
 
 .filter-by-category-overlay{
@@ -311,7 +323,7 @@ nav{
   background-color: rgb(243, 243, 243);
   width: 80%;
   height: 100%;
-  max-width: 350px;
+  max-width: 400px;
   position: fixed;
   right: -350px;
   transition: 0.5s;
@@ -408,7 +420,7 @@ nav{
   background-color: rgb(243, 243, 243);
   width: 80%;
   height: 100%;
-  max-width: 350px;
+  max-width: 400px;
   position: fixed;
   right: -350px;
   transition: 0.5s;
@@ -697,6 +709,7 @@ nav{
 .product-detailed-container{
   padding: 0.2rem;
   padding-top: calc(10vh + 1rem);
+  min-height: 100vh;
 }
 
 .pd-btn-container{
@@ -1671,12 +1684,6 @@ nav{
 
 @media screen and ( min-width: 600px ) {
 
-  /* Nav */
-
-  .nav__options ul li{
-    padding: 0.5rem 0.75rem;
-  }
-
   /* Home */
 
   .products-ul-container ul{
@@ -1759,6 +1766,24 @@ nav{
 }
 
 @media screen and ( min-width: 992px ){
+
+  /* Nav */
+
+  .nav__options ul{
+    gap: 0.75rem;
+  }
+
+  .nav__options ul li{
+    padding: 0.25rem 0.5rem;
+  }
+
+  .show-desktop{
+    display: block;
+  }
+
+  .nav__options ul li:hover p{
+    text-decoration: underline;
+  }
 
   /* Products */
 
